Closed Bug 1752498 Opened 3 years ago Closed 3 years ago

XML error shows garbage for location

Categories

(Core :: XML, defect)

defect

Tracking

()

RESOLVED FIXED
98 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox96 --- unaffected
firefox97 --- unaffected
firefox98 --- fixed

People

(Reporter: peterv, Assigned: peterv)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

No description provided.

I missed one caller to MOZ_XML_GetBase in the changes for bug 1749462.

Assignee: nobody → peterv
Status: NEW → ASSIGNED
See Also: → 1751796

Set release status flags based on info from the regressing bug 1749462

Has Regression Range: --- → yes

Patch looks fine, though I'm a bit confused as to the relationship with bug 1751796. The test indicates that this this fixes the column reporting somehow (not immediately apparent to me why), but also this is filed as a separate bug?

Pushed by pvanderbeken@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/2cc5e0d203ec XML error shows garbage for location. r=bholley

(In reply to Bobby Holley (:bholley) from comment #4)

Patch looks fine, though I'm a bit confused as to the relationship with bug 1751796. The test indicates that this this fixes the column reporting somehow (not immediately apparent to me why), but also this is filed as a separate bug?

This is a separate issue. It does not fix column reporting, and I have disabled the test until bug 1751796 is fixed (it passes in debug builds).

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 98 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: