Bug 1752498 - XML error shows garbage for location. r=bholley

Differential Revision: https://phabricator.services.mozilla.com/D137262